# umamusume

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat
cmake/Hunter/: config.cmake
dictionaries/: training_event_characters.json  training_event_supports.json
dictionaries/en/: locale.json  text_data.json
dictionaries/jp/: character_system_text.json  race_jikkyo_comment.json  race_jikkyo_message.json  text_data.json
tools/compare/: main.cc
tools/dumper/: main.cc
tools/gametora/: main.cc
umamusume/: app.cc  app.h  config.cc  config.h  hook.hpp  il2cpp.cc  il2cpp.h  locale.cc  locale.h  main.cc  training_event.cc  training_event.h
umamusume/proxy/: proxy.cc  proxy.def  proxy.h
